--- a/kona-bikes/src/container/Home/Home.css
+++ b/kona-bikes/src/container/Home/Home.css
@@ -1,4 +1,15 @@
+body {
+    background: url('../../images/background.jpg');
+    background-attachment: fixed;
+}
+
+.background {
+    width: 100%;
+    position: absolute;
+    background-color:rgba(0, 0, 0, 0.3);
+}
+
 .home {
-    width: 90%;
+    width: 75%;
     margin: 2% auto 0 auto;
 }
