--- a/kona-bikes/src/App.css
+++ b/kona-bikes/src/App.css
@@ -1,3 +1,14 @@
 * {
     box-sizing: border-box;
 }
+
+body {
+    background: url('./images/background.jpg');
+    background-attachment: fixed;
+}
+
+.background {
+    width: 100%;
+    position: absolute;
+    background-color:rgba(0, 0, 0, 0.3);
+}
