Немного изменены стили Carousel. Переименован ContactsInfo-ContactsContent

--- a/kona-bikes/src/App.css
+++ b/kona-bikes/src/App.css
@@ -9,6 +9,11 @@ body {
 
 .background {
     width: 100%;
+    min-height: 100%;
     position: absolute;
     background-color:rgba(0, 0, 0, 0.3);
+}
+
+.container {
+    width: 80%;
 }
