--- a/kona-bikes/src/components/Navs/Navs.css
+++ b/kona-bikes/src/components/Navs/Navs.css
@@ -1,3 +1,27 @@
 .logo {
-    width: 100px;
+    width: 120px;
+     cursor: pointer;
 }
+
+.nav {
+    font-size: 18px;
+    text-transform: uppercase;
+}
+
+.nav_li {
+    margin-top: 80px;
+    cursor: pointer;
+}
+
+.nav_li span {
+    padding: 15px;
+    color: white;
+}
+
+.nav_li span:hover {
+    color: black;
+    background: rgb(242, 242, 255);
+}
+
+
+
